# krypton-entropy-core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: engine.rs  lib.rs  metrics.rs  sentry.rs  signals.rs
tests/: entropy_engine_tests.rs  sentry_tests.rs
