[package]
name = "entropy-krypton-core"
version = "0.1.0"
edition = "2021"
description = "A small Rust library for metrics-driven job guarding (keep/throttle/kill) with a simple Sentry engine."
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
